@@ -1,7 +1,8 @@
 package com.example.animals.exercises;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
 
 import com.example.animals.domain.Animal;
 import com.example.animals.domain.Cat;
@@ -14,10 +15,20 @@ import com.example.animals.domain.Spider;
  *
  */
 public class Exercise6 {
+	private static final BiConsumer<Integer, List<Animal>> printAnimalGroups = (count, list) -> System.out
+			.printf("%d: %s\n",count,list);
+
 	public static void main(String[] args) {
 		// Group the animals by their number of legs
-		List<Animal> animals = Arrays.asList(new Cat(), new Spider(), new Cat("Tekir"), new Fish("Free Willy"),
-				new Spider(), new Fish("Jaws"));
-		
+		var animals = List.of(
+				new Cat(), 
+				new Spider(), 
+				new Cat("Tekir"), 
+				new Fish("Free Willy"),
+				new Spider(), 
+				new Fish("Jaws")
+		);
+		var groupedAnimals = animals.stream().collect(Collectors.groupingBy(Animal::getLegs));
+		groupedAnimals.forEach(printAnimalGroups);
 	}
 }
