@@ -1,6 +1,5 @@
 package com.example.animals.exercises;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.example.animals.domain.Animal;
@@ -16,8 +15,20 @@ import com.example.animals.domain.Spider;
 public class Exercise8 {
 	public static void main(String[] args) {
 		// Count the number of species
-		List<Animal> animals = Arrays.asList(new Cat(), new Spider(), new Cat("Tekir"), new Fish("Free Willy"),
-				new Spider(), new Fish("Jaws"));
-		
+		var animals = List.of(
+				new Cat(), 
+				new Spider(), 
+				new Cat("Tekir"), 
+				new Fish("Free Willy"),
+				new Spider(), 
+				new Fish("Jaws")
+		);
+		var totalNumberOfSpecies = 
+				animals.stream()
+				       .map(Animal::getClass)
+				       .map(Class::getSimpleName)
+				       .distinct()
+				       .count();
+		System.out.println(totalNumberOfSpecies);
 	}
 }
